@@ -1,6 +1,5 @@
 package com.nhl.link.rest.runtime;
 
-import com.nhl.link.rest.provider.ValidationExceptionMapper;
 import com.nhl.link.rest.runtime.adapter.LinkRestAdapter;
 import com.nhl.link.rest.runtime.protocol.ICayenneExpParser;
 import org.apache.cayenne.di.Binder;
@@ -19,38 +18,19 @@ import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 import java.util.function.Consumer;
 
-import static org.junit.Assert.*;
+import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertFalse;
+import static org.junit.Assert.assertSame;
+import static org.junit.Assert.assertTrue;
 import static org.mockito.Matchers.any;
 import static org.mockito.Matchers.anyCollectionOf;
-import static org.mockito.Mockito.*;
+import static org.mockito.Mockito.doAnswer;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.verify;
 
 public class LinkRestBuilderTest {
 
-    @Test
-    public void testMapException_Standard() {
-        LinkRestBuilder builder = new LinkRestBuilder();
-        Feature f = builder.build();
-
-        FeatureContext context = mock(FeatureContext.class);
-
-        f.configure(context);
-
-        verify(context).register(ValidationExceptionMapper.class);
-    }
-
-    @Test
-    public void testMapException_Custom() {
-        LinkRestBuilder builder = new LinkRestBuilder().mapException(TestValidationExceptionMapper.class);
-        Feature f = builder.build();
-
-        FeatureContext context = mock(FeatureContext.class);
-
-        f.configure(context);
-
-        verify(context).register(TestValidationExceptionMapper.class);
-        verify(context, never()).register(ValidationExceptionMapper.class);
-    }
-
+    @Deprecated
     @Test
     public void testBuild_Adapter() {
 
